Flags of linked-in nested collections are determined by the top-level collection #66154

Closed
opened 2019-06-26 15:49:56 +02:00 by Sybren A. Stüvel · 7 comments

Blender Version
Broken: 2.80, 310bd2f811, master, 2019-06-26

Short description of error
The flags (enabled/disabled, visible, holdout, etc.) of linked-in nested collections aren't always saved. It looks like they're all determined by the top collection.

Exact steps for others to reproduce the error

  1. Unpack collection_demo.zip
  2. Open collection_demo.blend
  3. In the outliner, disable "Subcollection 2". This hides the "Disable my collection" text.
  4. Save & reload the blend file.
  5. See that "Subcollection 2" is now re-enabled.

Another example of the same problem:

  1. Open collection_demo.blend
  2. In the outliner, disable "Top collection" and re-enable "Subcollection 1". This shows Suzanne.
  3. Save & reload the blend file.
  4. See that "Subcollection 1" is now disabled again.

In both cases the enabled/disabled state of the nested collection is determined by the top collection.

**Blender Version** Broken: 2.80, 310bd2f811acd7ae5d149274720d200df140558e, master, 2019-06-26 **Short description of error** The flags (enabled/disabled, visible, holdout, etc.) of linked-in nested collections aren't always saved. It looks like they're all determined by the top collection. **Exact steps for others to reproduce the error** 1. Unpack [collection_demo.zip](https://archive.blender.org/developer/F7550129/collection_demo.zip) 2. Open `collection_demo.blend` 3. In the outliner, disable "Subcollection 2". This hides the "Disable my collection" text. 4. Save & reload the blend file. 5. See that "Subcollection 2" is now re-enabled. Another example of the same problem: 1. Open `collection_demo.blend` 2. In the outliner, disable "Top collection" and re-enable "Subcollection 1". This shows Suzanne. 3. Save & reload the blend file. 4. See that "Subcollection 1" is now disabled again. In both cases the enabled/disabled state of the nested collection is determined by the top collection.
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Dalai Felinto was assigned by Sybren A. Stüvel 2019-06-26 15:50:21 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

See D4416: Fix viewlayer hide/exclude settings getting lost for linked collections..

I decided to postpone the fix for this to 2.81 since it's quite risky to touch library linking code.

See [D4416: Fix viewlayer hide/exclude settings getting lost for linked collections.](https://archive.blender.org/developer/D4416). I decided to postpone the fix for this to 2.81 since it's quite risky to touch library linking code.
Dalai Felinto was unassigned by Brecht Van Lommel 2019-06-26 17:21:01 +02:00
Brecht Van Lommel self-assigned this 2019-06-26 17:21:01 +02:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Member

I agree -- currently the behaviour stable and predictable (just unwanted) so it's not critical.

I agree -- currently the behaviour stable and predictable (just unwanted) so it's not critical.

This issue was referenced by 659ccd9cd2

This issue was referenced by 659ccd9cd2ee79c462147b53c18ecc8b9faf74a6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66154
No description provided.